# RoaringGeoMaps

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
c/include/: roaring_geo_map_reader.h  roaring_geo_map_writer.h
c/src/: roaring_geo_map_reader.cpp  roaring_geo_map_writer.cpp
cpp/benchmarks/: main.cpp
cpp/src/: Block.cpp  Block.h  BlockFilter.h  BlockIndexReader.h  BlockIndexWriter.cpp  BlockIndexWriter.h  BlockOffset.h  ByteColumnReader.cpp  ByteColumnReader.h  ByteColumnWriter.cpp  ByteColumnWriter.h  CellFilter.cpp  CellFilter.h  CellIdColumnReader.cpp  CellIdColumnReader.h  CellIdColumnWriter.cpp  CellIdColumnWriter.h  Header.cpp  Header.h  ReaderHelpers.h  RoaringBitmapColumnReader.cpp  RoaringBitmapColumnReader.h  RoaringBitmapColumnWriter.cpp  RoaringBitmapColumnWriter.h  RoaringGeoMapReader.cpp  RoaringGeoMapReader.h  RoaringGeoMapWriter.cpp  RoaringGeoMapWriter.h  S2BlockIndexReader.cpp  S2BlockIndexReader.h  VectorView.h  WriteHelpers.h
cpp/src/endian/: endian.h
cpp/src/io/: FileReadBuffer.cpp  FileReadBuffer.h  FileWriteBuffer.cpp  FileWriteBuffer.h
cpp/test/: RoaringGeoMapWriterTest.cpp
go/: go.mod  roaringgeomap.go  roaringgeomap_test.go
go/benchmarks/: benchmark_usa_test.go
